--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página Web</title>
-</head>
-<body>
-    <h1>Hola Mundo!</h1>
-    <p>Este es un ejemplo de página web creado en Google Colab.</p>
-</body>
-</html>
+<iframe
+    allow="microphone;"
+    width="350"
+    height="430"
+    src="https://console.dialogflow.com/api-client/demo/embedded/e2156940-b6a2-48b0-9ebf-00b412e1158d">
+</iframe>
