--- a/index.html
+++ b/index.html
@@ -1,6 +1,1 @@
-<iframe
-    allow="microphone;"
-    width="350"
-    height="430"
-    src="https://console.dialogflow.com/api-client/demo/embedded/e2156940-b6a2-48b0-9ebf-00b412e1158d">
-</iframe>
+<script src="https://account.snatchbot.me/script.js"></script><script>window.sntchChat.Init(383678)</script>
