--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<script src="https://account.snatchbot.me/script.js"></script><script>window.sntchChat.Init(383682)</script>
+<iframe
+    allow="microphone;"
+    width="350"
+    height="430"
+    src="https://console.dialogflow.com/api-client/demo/embedded/fc9d9ae0-83a3-426e-b5a3-d4464a835ad2">
+</iframe>
+      
